# PyQAlloy

./: .devcontainer.json  .gitignore  .readthedocs.yaml  CustomDatasetFromBSON.ipynb  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: lastCommit.yml  publishToPyPI.yaml  test.yml  weeklyTest.yml
dev/: ULTERA_sample.bson  jDummyDatabaseInMemory.ipynb
devTools/: jDummyDatabaseInMemory.ipynb
docs/: changelog.rst  conf.py  index.rst  install.md
docs/_build/: .buildinfo  genindex.html  index.html  install.html  objects.inv  py-modindex.html  search.html  searchindex.js
docs/_build/.doctrees/: environment.pickle  index.doctree  install.doctree
docs/_build/.doctrees/source/: modules.doctree  pyqalloy.core.doctree  pyqalloy.data_analyzer.doctree  pyqalloy.doctree
docs/_build/_sources/: index.rst.txt
docs/_build/examples/: UserCuration.html
docs/_build/source/: modules.html  pyqalloy.core.html  pyqalloy.data_analyzer.html  pyqalloy.html
docs/examples/: UserCuration.ipynb
docs/source/: modules.rst  pyqalloy.core.rst  pyqalloy.curation.rst  pyqalloy.data_analyzer.rst  pyqalloy.rst
examples/: 01.CurationULTERA.ipynb  02.CustomDatasetFromBSON.ipynb  ExampleTemplateULTERA_ErrorsAdded.xlsx  README.md
pyqalloy/: __init__.py  credentials.json
pyqalloy/core/: pyqalloy.py  utils.py
pyqalloy/curation/: analysis.py
pyqalloy/data_analyzer/: curation.py
pyqalloy/tests/: test_AbnormalDataAnalyzer.py  test_AllDataAnalyzer.py  test_DBOverrideInSCA.py  test_SingleCompositionAnalyzer.py  test_SingleDOIAnalyzer.py  test_TemplateParsing.py  test_UtilityFunctions.py
ulteratools/: __init__.py  credentials.json  requirements.txt
ulteratools/data_analyzer/: curation.py
ulteratools/tests/: test_AbnormalDataAnalyzer.py  test_SingleCompositionAnalyzer.py
