[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["dev*", "examples*"]

[project]
name = "pyqalloy"
version = "0.3.5"
authors = [
  { name="Adam Krajewski", email="ak@psu.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Physics",
]
description = "Easily extensible Python package for running Structure-Informed Prediction of Formation Energy using Neural Networks (SIPFENN)"
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "pymatgen>=2022.1.9",
    "numpy>=1.22.0",
    "tqdm>=4.63.0",
    "natsort>=8.0.0",
    "pymongo>=4.2",
    "pySmartDL>=1.3.4",
    "dnspython",
    "scikit-learn",
    "plotly",
    "xlsxwriter",
    "kaleido",
]

[project.urls]
"Research Page" = "https://phaseslab.com/ultera"
"Homepage" = "https://ultera.org"
"Bug Tracker" = "https://github.com/PhasesResearchLab/ULTERA-tools/issues"