[build-system]
requires = ["setuptools>=61.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["dev*", "examples*"]

[project]
name = "pyqalloy"
version = "0.3.5.post2"
authors = [
  { name="Adam Krajewski", email="ak@psu.edu" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Chemistry",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Quality Assurance"
]
description = "PyQAlloy is a tool for detection of abnormal data in alloy datasets (and other chemical spaces), allowing removal of hard-to-find erros in the data which often introduce systematic errors throwing off machine learning and researchers alike. Its development is a part of ULTERA Project carried under the DOE ARPA-E ULTIMATE program that aims to develop a new generation of materials for turbine blades and related applications."
readme = "README.md"

requires-python = ">=3.9"
dependencies = [
    "pymatgen>=2022.1.9",
    "numpy>=1.22.0",
    "tqdm>=4.63.0",
    "natsort>=8.0.0",
    "pymongo>=4.2",
    "pySmartDL>=1.3.4",
    "dnspython",
    "scikit-learn",
    "plotly",
    "xlsxwriter",
    "kaleido",
]

[project.urls]
"Research Page" = "https://ultera.org"
"Homepage" = "https://pyqalloy.ultera.org"
"Bug Tracker" = "https://github.com/PhasesResearchLab/PyQAlloy/issues"